Created initial migrations using EntityFramework Core.

--- a/Source/appsettings.Development.json
+++ b/Source/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Data Source=ProAgil.db"
   }
 }
